kubernetes/addons/networking/cilium/ingress/hubble-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://hubble.javiersant.com"
    gethomepage.dev/description: hubble Dashboard
    gethomepage.dev/group: Networking
    gethomepage.dev/icon: cilium.svg
    gethomepage.dev/name: Hubble
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.javiersant.com`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: iam
      services:
        - kind: Service
          name: hubble-ui
          port: 80
  tls:
    secretName: wildcard-javstudio-org-tls
